# routers/router.go
@@ -95,6 +95,11 @@ func InitRouter() *fiber.App {
 	}
 
 	{
+		apiv1.Post("/mgb/monitor", controller.SetMgbData)
+		apiv1.Get("/mgb/monitor", controller.GetMgbMonitor)
+	}
+
+	{
 		apiv1.Get("/test", controller.GetTests)
 		apiv1.Post("/test", controller.AddTest)
 		apiv1.Put("/test/:id", controller.EditTest)
